--- a/index.html
+++ b/index.html
@@ -25,9 +25,28 @@
     </nav>
     <section id="home">
         <h2>Home Page</h2>
-        <p>Introduzione alla nostra associazione e missione.</p>
-        <p>Panoramica dei servizi: programmi di formazione, eventi e workshop.</p>
-        <p>Partner e Sponsor: <br>NEVEPLAST, FISI, NEXTPOWDER, HEAD, OAKLEY, ARMADA, VOLCOM, BURTON, CAPITA, DC SHOES, NITRO, ELAN.</p>
+        <p>Benvenuti nel mondo di 360Skills, dove la passione per gli sport d'azione incontra l'innovazione e l'inclusione. La nostra missione è avvicinare persone di tutte le età e abilità agli sport invernali, offrendo un'esperienza unica e di alta qualità. Con programmi di formazione avanzati, eventi emozionanti e workshop interattivi, ci impegniamo a creare un ambiente inclusivo e stimolante per tutti.</p>
+        <h3>Servizi Offerti</h3>
+        <ul>
+            <li>Programmi di formazione personalizzati per sci e snowboard</li>
+            <li>Eventi e workshop per migliorare le tue abilità</li>
+            <li>Attività multisport per lo sviluppo delle abilità motorie</li>
+        </ul>
+        <h3>Partner e Sponsor</h3>
+        <p>Collaboriamo con i migliori nel settore per garantirti un'esperienza di qualità. I nostri partner includono:</p>
+        <ul>
+            <li>NEVEPLAST</li>
+            <li>FISI</li>
+            <li>HEAD</li>
+            <li>OAKLEY</li>
+            <li>ARMADA</li>
+            <li>VOLCOM</li>
+            <li>BURTON</li>
+            <li>CAPITA</li>
+            <li>DC SHOES</li>
+            <li>NITRO</li>
+            <li>ELAN</li>
+        </ul>
     </section>
     <section id="amministrativa">
         <h2>Area Amministrativa</h2>
@@ -38,35 +57,45 @@
     </section>
     <section id="formativa">
         <h2>Area Formativa</h2>
-        <p>Calendario dettagliato degli eventi e delle sessioni di formazione.</p>
-        <p>Accesso a risorse didattiche: video, articoli e guide.</p>
-        <p>Innovazione tecnologica: utilizzo di AI e tecnologie indossabili.</p>
-        <p>Attività propedeutiche: slackline, skateboard, parkour, calisthenics, etc.</p>
+        <p>Offriamo una vasta gamma di corsi e attività per tutte le età e abilità. Il nostro calendario dettagliato degli eventi ti permette di pianificare la tua partecipazione con anticipo. Accedi a risorse didattiche di alta qualità, inclusi video, articoli e guide create dai nostri esperti.</p>
+        <h3>Innovazione Tecnologica</h3>
+        <p>Utilizziamo le più recenti tecnologie AI e dispositivi indossabili per migliorare la tua esperienza di apprendimento e allenamento. La nostra piattaforma SportTech è progettata per aiutarti a raggiungere i tuoi obiettivi più velocemente.</p>
+        <h3>Attività Propedeutiche</h3>
+        <ul>
+            <li>Slackline</li>
+            <li>Skateboard</li>
+            <li>Parkour</li>
+            <li>Calisthenics</li>
+            <li>Surf</li>
+            <li>Wakeboard</li>
+            <li>Sup</li>
+            <li>Acrobatica</li>
+        </ul>
     </section>
     <section id="features">
         <h2>Funzionalità Interattive</h2>
-        <p>Finestre di dialogo: FAQ, supporto live, moduli di contatto.</p>
-        <p>Community engagement: forum, chat, feedback e sondaggi.</p>
+        <p>Offriamo diverse funzionalità interattive per migliorare la tua esperienza:</p>
+        <ul>
+            <li>Finestre di dialogo: FAQ, supporto live, moduli di contatto</li>
+            <li>Community engagement: forum, chat, feedback e sondaggi</li>
+        </ul>
     </section>
     <section id="updates">
         <h2>Notifiche e Aggiornamenti</h2>
-        <p>Notifiche push per eventi importanti e scadenze.</p>
-        <p>Newsletter periodiche con le ultime novità.</p>
+        <p>Rimani aggiornato con le nostre notifiche push per eventi importanti e scadenze. Iscriviti alla nostra newsletter per ricevere aggiornamenti periodici sulle ultime novità e attività.</p>
     </section>
     <section id="compliance">
         <h2>Comunicazione e Contestualizzazione</h2>
-        <p>Pagine dedicate per MOG e politiche di salvaguardia con documenti scaricabili.</p>
-        <p>Video esplicativi e casi pratici.</p>
+        <p>Abbiamo pagine dedicate per i Modelli Organizzativi Gestionali (MOG) e le politiche di salvaguardia, complete di documenti scaricabili. Guarda i nostri video esplicativi e casi pratici per capire meglio le nostre politiche e procedure.</p>
     </section>
     <section id="support">
         <h2>Supporto Riforma Sport</h2>
-        <p>Sezione con le ultime notizie sulla riforma dello sport e guide pratiche.</p>
-        <p>Strumenti e risorse per la formazione continua degli associati.</p>
+        <p>Offriamo risorse dettagliate per aiutarti a conformarti alle normative sportive. Utilizza le nostre guide pratiche e strumenti per la formazione continua per mantenerti aggiornato e in regola.</p>
     </section>
     <section id="disability">
         <h2>Sezione Disabilità</h2>
-        <p>Accessibilità: programmi specifici per persone con disabilità motoria e psicomotoria.</p>
-        <p>Inclusione: iniziative e attività per l'inclusione sociale.</p>
+        <p>Ci impegniamo a rendere gli sport accessibili a tutti. Offriamo programmi specifici per persone con disabilità motoria e psicomotoria, inclusi corsi di avvicinamento e attività inclusive. Le nostre iniziative mirano a promuovere l'inclusione sociale e il benessere attraverso lo sport.</p>
     </section>
 </body>
 </html>
+
